fixed the portfolio edit page so the bg covers completely

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,6 +53,14 @@
     #00aeee,
     #0dc6ee
   );
+  height: 100vh;
+}
+.portfolios {
+  margin: 20px;
+}
+
+.editPortfolioBox {
+  width: 10vw;
 }
 /* END */
 
